@@ -1,10 +1,7 @@
 package com.controle.fechamentocaixa.controller;
 
 import java.time.LocalDateTime;
-import java.util.HashSet;
 import java.util.List;
-import java.util.Set;
-import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
@@ -12,7 +9,6 @@ import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
-import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
@@ -21,11 +17,12 @@ import org.springframework.web.bind.annotation.RestController;
 import com.controle.fechamentocaixa.dto.LoginRequest;
 import com.controle.fechamentocaixa.dto.LoginResponse;
 import com.controle.fechamentocaixa.dto.RegistroUsuarioRequest;
+import com.controle.fechamentocaixa.dto.UsuarioResponse;
 import com.controle.fechamentocaixa.model.Perfil;
-import com.controle.fechamentocaixa.model.Usuario;
 import com.controle.fechamentocaixa.repository.UsuarioRepository;
 import com.controle.fechamentocaixa.security.jwt.JwtUtils;
 import com.controle.fechamentocaixa.security.services.UserDetailsImpl;
+import com.controle.fechamentocaixa.service.UsuarioService;
 
 import jakarta.validation.Valid;
 
@@ -43,10 +40,10 @@ public class AuthController {
     private UsuarioRepository usuarioRepository;
 
     @Autowired
-    private PasswordEncoder encoder;
-
-    @Autowired
     private JwtUtils jwtUtils;
+    
+    @Autowired
+    private UsuarioService usuarioService;
 
     /**
      * Endpoint para autenticar um usuário
@@ -65,21 +62,19 @@ public class AuthController {
         UserDetailsImpl userDetails = (UserDetailsImpl) authentication.getPrincipal();
         List<String> roles = userDetails.getAuthorities().stream()
                 .map(item -> item.getAuthority())
-                .collect(Collectors.toList());
+                .toList();
         
-        // Atualiza último acesso
-        usuarioRepository.findById(userDetails.getId()).ifPresent(usuario -> {
-            usuario.setDataUltimoAcesso(LocalDateTime.now());
-            usuarioRepository.save(usuario);
-        });
+        // Registra o acesso do usuário
+        usuarioService.registrarAcesso(userDetails.getEmail());
 
-        return ResponseEntity.ok(LoginResponse.builder()
-                .token(jwt)
-                .id(userDetails.getId())
-                .email(userDetails.getEmail())
-                .nome(userDetails.getNome())
-                .perfis(roles)
-                .build());
+        LoginResponse response = new LoginResponse();
+        response.setToken(jwt);
+        response.setId(userDetails.getId());
+        response.setEmail(userDetails.getEmail());
+        response.setNome(userDetails.getNome());
+        response.setPerfis(roles);
+        
+        return ResponseEntity.ok(response);
     }
 
     /**
@@ -90,49 +85,20 @@ public class AuthController {
      */
     @PostMapping("/registrar")
     public ResponseEntity<?> registerUser(@Valid @RequestBody RegistroUsuarioRequest registroRequest) {
-        if (usuarioRepository.existsByEmail(registroRequest.getEmail())) {
-            return ResponseEntity
-                    .badRequest()
-                    .body("Erro: Email já está em uso!");
-        }
-
-        // Cria nova conta de usuário
-        Usuario usuario = new Usuario();
-        usuario.setNome(registroRequest.getNome());
-        usuario.setEmail(registroRequest.getEmail());
-        usuario.setSenha(encoder.encode(registroRequest.getSenha()));
-        usuario.setDataCriacao(LocalDateTime.now());
-        usuario.setAtivo(true);
-
-        Set<String> strRoles = registroRequest.getPerfis();
-        Set<Perfil> roles = new HashSet<>();
-
-        // Se nenhum perfil for especificado, atribui CAIXA por padrão
-        if (strRoles == null || strRoles.isEmpty()) {
-            roles.add(Perfil.CAIXA);
-        } else {
-            strRoles.forEach(role -> {
-                switch (role) {
-                case "admin":
-                    roles.add(Perfil.ADMIN);
-                    break;
-                case "gerente":
-                    roles.add(Perfil.GERENTE);
-                    break;
-                default:
-                    roles.add(Perfil.CAIXA);
+        try {
+            // Verifica se é o primeiro usuário e adiciona perfil ADMIN
+            if (usuarioRepository.count() == 0 && (registroRequest.getPerfis() == null || !registroRequest.getPerfis().contains("ADMIN"))) {
+                if (registroRequest.getPerfis() == null) {
+                    registroRequest.setPerfis(java.util.Set.of("ADMIN"));
+                } else {
+                    registroRequest.getPerfis().add("ADMIN");
                 }
-            });
+            }
+            
+            UsuarioResponse usuarioResponse = usuarioService.registrarUsuario(registroRequest);
+            return ResponseEntity.ok(usuarioResponse);
+        } catch (Exception e) {
+            return ResponseEntity.badRequest().body(e.getMessage());
         }
-
-        // Se for o primeiro usuário, atribui ADMIN
-        if (usuarioRepository.count() == 0) {
-            roles.add(Perfil.ADMIN);
-        }
-
-        usuario.setPerfis(roles);
-        usuarioRepository.save(usuario);
-
-        return ResponseEntity.ok("Usuário registrado com sucesso!");
     }
 } 
